# appliance_control

./: .gitignore  Dockerfile.controller  Dockerfile.python  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  simulator.py
.github/workflows/: ci.yml
bare_metal_foc/: CMakeLists.txt
bare_metal_foc/docs/: REQUIREMENTS.md
bare_metal_foc/include/: can_frame.h  can_sim.h  foc_types.h  no_alloc.h  pid.h  pid_gains.h  transforms.h
bare_metal_foc/python/: bldc_model.py  codegen.py  zn_tuner.py
bare_metal_foc/scripts/: check_coverage.py
bare_metal_foc/src/: can_frame.c  can_sim.c  pid.c  transforms.c
bare_metal_foc/tests/: test_can.c  test_clarke.c  test_integration.c  test_park.c  test_pid.c  test_runner.c
bare_metal_foc/tests_python/: test_bldc_model.py  test_codegen.py  test_zn_tuner.py
batch_mixer_scada/: CMakeLists.txt
batch_mixer_scada/include/: AdsLink.h  BatchComponent.h  BatchController.h  IBatchComponent.h  ITwinCatLink.h  MixerDrum.h  PressureGuard.h  PressureSensor.h  SimulatedAdsLink.h  Valve.h  WeighingScale.h
batch_mixer_scada/migrations/: 001_schema.sql  002_seed_recipes.sql  003_add_pressure_threshold.sql
batch_mixer_scada/scripts/: Backup-BatchDB.ps1  Install-Service.ps1  Uninstall-Service.ps1
batch_mixer_scada/src/: AdsLink.cpp  BatchController.cpp  MixerDrum.cpp  PressureGuard.cpp  PressureSensor.cpp  SimulatedAdsLink.cpp  Valve.cpp  WeighingScale.cpp  windows_service.cpp
batch_mixer_scada/tests/: test_fsm.cpp  test_hal.cpp
controller/: CMakeLists.txt
controller/include/: CycleController.h  CycleState.h  IDoorLock.h  IHeaterControl.h  IPumpControl.h  SimulatedComponents.h
controller/src/: CycleController.cpp  SimulatedComponents.cpp  SocketSensorReader.h  main.cpp
controller/tests/: CMakeLists.txt  test_fsm.cpp
docs/: hil.md  washer.md
hil/: simulator_hil.py  telemetry.py
hil/controller/: CMakeLists.txt
hil/controller/cmake/: toolchain-arm64.cmake
hil/controller/include/: HilFsm.h  MqttClient.h
hil/controller/src/: HilFsm.cpp  MqttClient.cpp  main_hil.cpp
hil/controller/tests/: test_fsm.cpp  test_mqtt_client.cpp
hil/tests/: test_hil_simulator.py  test_hil_telemetry.py
static/: index.html
tests/: test_simulator.py
